--- a/source/pony.web/src/main/resources/net/dorokhov/pony/web/client/css/artistList.css
+++ b/source/pony.web/src/main/resources/net/dorokhov/pony/web/client/css/artistList.css
@@ -1,5 +1,6 @@
 .artistView {
 	cursor: pointer;
+	border: 1px solid transparent;
 }
 .artistView_selected {
 	background-color: #8ba7c9;
